assets/css/styles.css
/* ... */
* {
    margin: 0;
    padding: 0;
    text-decoration: none;
    list-style: none;
    font: inherit;
}

body {
    min-height: 100vh;
    font-family: "Poppins", sans-serif;
    color: var(--clr-dark-green);
}

img,
picture,
svg,
video {
    display: block;
    max-width: 100%;
}

a {
    color: inherit;
}

/* CSS variables */

:root {
    --text-body: "Poppins", sans-serif;
    --clr-beige: #D6CBB8;
    --clr-gold: #AC933C;
    --clr-dark-green: #0B1611;
    --clr-medium-green: #0A4E2F;
    --clr-off-white: #FBFBFB;
    --clr-deep-green: #1F4634;
}

/* header and navbar */
.header {
    background-color: var(--clr-dark-green);
    position: fixed;
    width: 100%;
    top: 0;
}

.header__content {
    display: flex;
    align-items: center;
    justify-content: flex-start;
    padding: 0 1.25rem;
}

.logo {
    color: var(--clr-beige);
    font-size: 1.5625rem;
    font-weight: 600;

}

.nav__list {
    display: flex;
    align-items: center;
    column-gap: 1.875rem;
    padding: 0 1.875rem;
    min-height: 3.75rem;
}

.nav__link {
    color: var(--clr-beige);
    font-weight: 400;
}

/* responsive navbar */
.hamburger {
    display: none;
    cursor: pointer;
}

.bar {
    height: 3px;
    width: 1.6875rem;
    background-color: var(--clr-beige);
    margin: 3px 0;
    opacity: 0.8;
    transition: all .3s ease-in-out;
    border-radius: 0.9375rem;
}

.nav--open {
    transform: translate(0) !important;
}

.hamburger--open .bar:nth-child(1) {
    transform: translateY(12px) rotate(45deg);
}

.hamburger--open .bar:nth-child(2) {
    opacity: 0;
}

.hamburger--open .bar:nth-child(3) {
    transform: translateY(0) rotate(-45deg);
}

/* hero section */
.hero-section-container {
    color: var(--clr-beige);
    height: 100vh;
}

.bg-video {
    background-image: url(https://raw.githubusercontent.com/camilabandeira/BrazBrew/master/assets/images/hero-section-img.webp);
    background-size: cover;
    background-position: center;
    position: absolute;
    right: 0;
    left: 0;
    z-index: -1;
    width: 100%;
    height: 100vh;
    object-fit: cover;
}

.hero-section-wrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    flex-wrap: nowrap;
    background-color: rgba(11, 22, 17, 0.5);
    height: 100vh;
}

.hero-section-wrapper h3 {
    font-weight: 200;
    font-size: 0.8125rem;
    text-transform: uppercase;
    letter-spacing: 1px;
    text-align: center;
    padding: 15px;
    margin-bottom: -5;
}

.hero-section-wrapper h1 {
    font-size: 3.125rem;
    font-weight: 700;
    color: var(--clr-gold);
    width: 60%;
    text-align: center;
    line-height: 1;

}

.hero-section-wrapper a {
    width: 8.25rem;
    border: 1px solid var(--clr-beige);
    padding: 0.625rem;
    margin-top: 15px;
    text-transform: uppercase;
    font-size: 12px;
    text-align: center;
    transition: background-color 0.1s ease;
}

.hero-section-wrapper a:hover {
    color: var(--clr-gold);
}

/* menu section */

.menu-section {
    background-color: var(--clr-off-white);
    padding: 15px;

}

.menu-title {
    font-size: 1.5625rem;
    font-weight: 700;
    color: var(--clr-medium-green);
    padding-left: 0.625rem;
    padding-top: 0.9375rem;
}

.menu-container {
    display: flex;
    justify-content: space-between;
    flex-wrap: nowrap;
}

.menu-itens {
    flex-basis: calc(33.333% - 10px);
    text-align: center;
    padding: 10px;
}

.menu-list {
    border-bottom: 1px dotted #000;
    width: 100%;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
    padding-bottom: 3px;
}

.menu-itens h3 {
    font-size: 1.125rem;
    font-weight: 300;
    margin-bottom: 0.625rem;
    text-align: left;

}

.item-name {
    font-weight: 600;
}

.menu-description {
    display: block;
    text-align: left;
    font-size: 13px;
    margin-bottom: 13px;
    font-weight: 300;

}


.coffee-bean-icon {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 3px;
    margin-bottom: 1.25rem;
    padding-top: 1rem;


}

.coffee-bean-icon img {
    width: 19px;
    height: auto;
}

/* contact us section */

.contact_us-section {
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: var(--clr-dark-green);
    color: var(--clr-beige);
    height: 31.25rem;
}

.contact-us-img {
    background-image: url(https://raw.githubusercontent.com/camilabandeira/BrazBrew/master/assets/images/contact-us-img.webp);
    background-size: cover;
    background-position: center;
    height: 31.25rem;
}

.contact-us-form {
    padding: 3.125rem;
    font-weight: 100;
}

.contact_us-section form {
    display: flex;
    flex-direction: column;
    margin: 0 auto;
    gap: 8px;
    padding: 1.875rem;
}

textarea {
    height: 7.5rem;
}

::placeholder {
    padding: 0.3125rem;
}

input {
    border: 1px solid transparent;
}

.contact-us-btn {
    background-color: var(--clr-medium-green);
    color: var(--clr-off-white);
    cursor: pointer;
    padding: 10px;
    text-transform: uppercase;
    font-size: 12px;
    letter-spacing: 1px;

}

.contact-us-btn:hover {
    color: var(--clr-beige);
}

.contact-us-form h2 {
    font-size: 1.25rem;
    font-weight: 200;
    text-align: center;
    letter-spacing: 1px;
    line-height: 0;
}

.contact-us-form,
.contact-us-img {
    flex: 1;
}


.contact_us-section .thank-you-msg {
    padding: 1.5625rem 0.625rem;
    margin-bottom: 3.125rem;
    margin: 0 auto;
    text-align: center;
    color: var(--clr-gold);
    font-weight: 700;
    display: none;
    width: 70%;
}

.contact_us-section h5 p {
    margin: 10px;
}

/* connect section */
.connect-section {
    display: flex;
    background-color: var(--clr-off-white);
    gap: 60px;
    padding: 20px;
    max-width: 100%;
}

.connect-section>* {
    flex: 1 1 100%;
}
/* ... */

